packages/svelte/tests/compiler-errors/samples/runes-wrong-state-args/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid_rune_args_length',
		message: '`$state` must be called with zero or one arguments'
	}
});
